--- a/china/style.css
+++ b/china/style.css
@@ -9,7 +9,7 @@ body {
   color: white;
   margin: 0;
   padding: 0;
-  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  font-family: 'Times New Roman', Times, serif;
   position: absolute;
   transform: translateX(-50%);
   top: 50%;
