--- a/mmatrix/style.css
+++ b/mmatrix/style.css
@@ -3,7 +3,7 @@ body {
     margin: 0;
   }
 
-  h1 {
+  //h1 {
     font-size: 5em;
     text-align: center;
   color: white;
@@ -22,6 +22,6 @@ body {
   font-family: 'Times New Roman', Times, serif;
   position: absolute;
   transform: translateX(-50%);
-  top: 40%;
+  top: 5%;
   left: 48%;
   }
